; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_rtclock.c_setPop.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_rtclock.c_setPop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setPop(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %2, align 8
  %6 = call %struct.TYPE_3__* (...) @getCpuDatap()
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %5, align 8
  %7 = call i64 (...) @mach_absolute_time()
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %2, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @deadline_to_decrementer(i64 %8, i64 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = load i64, i64* %4, align 8
  %14 = add nsw i64 %12, %13
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @ml_set_decrementer(i32 %17)
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local %struct.TYPE_3__* @getCpuDatap(...) #1

declare dso_local i64 @mach_absolute_time(...) #1

declare dso_local i32 @deadline_to_decrementer(i64, i64) #1

declare dso_local i32 @ml_set_decrementer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
